<resources>
    <string name="app_name">CMA Connect</string>
    <string name="fcm_notification_channel_id">FCM_NOTIFICATOR</string>
    <string name="fcm_notification_channel_name">Server Notifications</string>
    <string name="fcm_notification_channel_desc">All the server side notifications</string>
    <string name="new_version_available_dialog_title">There\'s a new version avaiable to download</string>
    <string name="new_version_available_dialog_message">There\'s a new version available to download, click the Download button to update the app, or cancel to keep using this version. Updating the app is highly recommended, and unupdated apps won\'t have support.</string>
    <string name="action_download">Download</string>
    <string name="action_cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_general">General</string>
    <string name="pref_info">App Information</string>
    <string name="pref_version">App Version</string>
    <string name="pref_build">Build Number</string>
    <string name="pref_ui_version">User Interface Version</string>
    <string name="pref_notif">Notifications</string>
    <string name="pref_server_notifications">Receive Server Notifications</string>
    <string name="pref_server_notifications_desc">Change if you want to receive notifications sent from the server, for alerts and important info. Highly recommended to keep on.</string>
    <string name="action_click_login">Click to Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_confirm_password">Confirm Password</string>
    <string name="login_authenticate">Authenticate</string>
    <string name="login_confirm_register">Confirm your password to confirm your register</string>
    <string name="logout_confirm">Logging Out</string>
    <string name="logout_confirm_expl">Are you sure that you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_valid_name">No valid name to show</string>
    <string name="action_save">Save</string>
    <string name="login_username">Username</string>
    <string name="action_logout">Logout</string>
    <string name="updated_profile">Profile updated correctly</string>
    <string name="error_profile">There was an error while updating your profile. Our team is dealing with that problem from now on!</string>
    <string name="picker_folder_title">Folder</string>
    <string name="picker_image_title">Tap to select</string>
    <string name="pref_folder_picker">Folder Picker Library</string>
    <string name="pref_firebase">Firebase Version</string>
    <string name="pref_glide">Glide Version</string>
    <string name="message_showing_ads">We are showing ads</string>
    <string name="message_showing_ads_explain">We show ads to maintain our services, you can disable them if you buy any of our products. Our system detects when you bought something, and hides the ad automatically, but if you think that something is wrong, please, enter the code that was in your package when we sent it to you.</string>
    <string name="action_bought_something">Enter Code</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="pref_category_ads">Ads</string>
    <string name="pref_consumer_code">Consumer Code</string>
    <string name="pref_enable_ads">Enable Ads</string>
    <string name="configure_title">Configure a new Device</string>
    <string name="detected_new_device">New Device Detected</string>
    <string name="detected_new_device_expl">There\'s a new device ready to be configured.</string>
    <string name="action_configure">Configure</string>
</resources>
